testsuite/tests/th/T17820a.stderr
T17820a.hs:7:17: error: [GHC-28914]
    Level error: ‘C’ is bound at level 0 but used at level -1

